# valetudo-dreame-voicepack

./: .env.example  .gitignore  .pre-commit-config.yaml  GenerateVoices.ipynb  README.md  pyproject.toml  sound_list_l10s_ultra.csv  sound_list_l10s_ultra_fr.csv  to_ogg.sh  upload_voice.sh  wav2ogg.sh
vdvp/: constants.py  generate_audio.py  minimal_receiver.py  transcript_generator.py
vdvp/tts/: __init__.py  elevenlabs.py  fakeyou.py  tts_client.py
