[tool.poetry]
name = "valetudo-dreame-voicepack"
version = "0.1.0"
description = "AI Generated voice packs for Valetudo controlled robots"
authors = ["RobinFrcd <29704178+RobinFrcd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
fakeyou = "^1.2.6"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
